[package]
name = "lapce-rpc"
description = "Data formats between lapce components"
license = "Apache-2.0"
version = "0.2.5"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.17"
parking_lot = "0.11.2"
anyhow = "1.0.34"
indexmap = "1"
serde_json = "1.0.87"
serde = "1.0"
crossbeam-channel = "0.5.0"
lsp-types = { version = "0.93", features = ["proposed"] }
lapce-xi-rope = { version = "0.3.1", features = ["serde"] }
