[package]
name         = "lapce-rpc"
description  = "Data formats between lapce components"
license      = { workspace = true }
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow            = { workspace = true }
crossbeam-channel = { workspace = true }
indexmap          = { workspace = true }
parking_lot       = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }

lsp-types     = { workspace = true }
lapce-xi-rope = { workspace = true }

[dependencies.human-sort]
git = "https://github.com/dragazo/human-sort"
rev = "1e74db1e09e8194ba88ad983723cf6f8b0c365da"
