[package]
name = "lapce-ui"
version = "0.2.5"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2021"

[dependencies]
base64 = "0.13.0"
clap = { version = "3.2.17", features = ["derive"] }
image = "0.24.3"
chrono = "0.4.19"
log = "0.4.14"
fern = "0.6.0"
Inflector = "0.11.4"
rayon = "1.5.1"
alacritty_terminal = "0.17.0"
itertools = "0.10.1"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
unicode-width = "0.1.8"
im = { version = "15.0.0", features = ["serde"] }
regex = "1.5.6"
include_dir = "0.6.0"
anyhow = "1.0.32"
once_cell = "1.15"
serde = "1.0"
serde_json = "1.0"
lapce-xi-rope = { version = "0.3.1", features = ["serde"] }
lsp-types = { version = "0.93", features = ["proposed"] }
toml_edit = { version = "0.14.4", features = ["easy"] }
open = "3.0.2"

# lapce deps
druid = { git = "https://github.com/lapce/druid", branch = "shell_opengl", features = ["svg", "im", "serde"] }
# druid = { path = "../../druid/druid", features = ["svg", "im" , "serde"] }
lapce-data = { path = "../lapce-data" }
lapce-rpc = { path = "../lapce-rpc" }
lapce-core = { path = "../lapce-core" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
default = ["all-languages", "lapce-data/updater"]
portable = ["lapce-data/portable"]

# To build lapce with only some of the supported languages, for example:
#
#   cargo build --no-default-features -p lapce-ui \
#     --features lang-rust,lang-toml,lang-markdown,lang-json
#
all-languages = [
    "lang-bash",
    "lang-c",
    "lang-cmake",
    "lang-cpp",
    "lang-csharp",
    "lang-css",
    "lang-d",
    "lang-dart",
    "lang-dockerfile",
    "lang-elixir",
    "lang-elm",
    "lang-erlang",
    "lang-glimmer",
    "lang-glsl",
    "lang-go",
    "lang-hare",
    "lang-haskell",
    "lang-haxe",
    "lang-hcl",
    "lang-html",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-julia",
    "lang-kotlin",
    "lang-latex",
    "lang-lua",
    "lang-markdown",
    "lang-nix",
    "lang-ocaml",
    "lang-php",
    "lang-prisma",
    "lang-protobuf",
    "lang-python",
    "lang-ql",
    "lang-r",
    "lang-ruby",
    "lang-rust",
    "lang-scheme",
    "lang-scss",
    "lang-sql",
    "lang-svelte",
    "lang-swift",
    "lang-toml",
    "lang-typescript",
    "lang-vue",
    "lang-wgsl",
    "lang-xml",
    "lang-yaml",
    "lang-zig",
]

lang-bash = ["lapce-core/lang-bash"]
lang-c = ["lapce-core/lang-c"]
lang-cmake = ["lapce-core/lang-cmake"]
lang-cpp = ["lapce-core/lang-cpp"]
lang-csharp = ["lapce-core/lang-csharp"]
lang-css = ["lapce-core/lang-css"]
lang-d = ["lapce-core/lang-d"]
lang-dart = ["lapce-core/lang-dart"]
lang-dockerfile = ["lapce-core/lang-dockerfile"]
lang-elixir = ["lapce-core/lang-elixir"]
lang-elm = ["lapce-core/lang-elm"]
lang-erlang = ["lapce-core/lang-erlang"]
lang-glimmer = ["lapce-core/lang-glimmer"]
lang-glsl = ["lapce-core/lang-glsl"]
lang-go = ["lapce-core/lang-go"]
lang-hare = ["lapce-core/lang-hare"]
lang-haskell = ["lapce-core/lang-haskell"]
lang-haxe = ["lapce-core/lang-haxe"]
lang-hcl = ["lapce-core/lang-hcl"]
lang-html = ["lapce-core/lang-html"]
lang-java = ["lapce-core/lang-java"]
lang-javascript = ["lapce-core/lang-javascript"]
lang-json = ["lapce-core/lang-json"]
lang-julia = ["lapce-core/lang-julia"]
lang-kotlin = ["lapce-core/lang-kotlin"]
lang-latex = ["lapce-core/lang-latex"]
lang-lua = ["lapce-core/lang-lua"]
lang-markdown = ["lapce-core/lang-markdown"]
lang-nix = ["lapce-core/lang-nix"]
lang-ocaml = ["lapce-core/lang-ocaml"]
lang-php = ["lapce-core/lang-php"]
lang-prisma = ["lapce-core/lang-prisma"]
lang-protobuf = ["lapce-core/lang-protobuf"]
lang-python = ["lapce-core/lang-python"]
lang-ql = ["lapce-core/lang-ql"]
lang-r = ["lapce-core/lang-r"]
lang-ruby = ["lapce-core/lang-ruby"]
lang-rust = ["lapce-core/lang-rust"]
lang-scheme = ["lapce-core/lang-scheme"]
lang-scss = ["lapce-core/lang-scss"]
lang-sql = ["lapce-core/lang-sql"]
lang-svelte = ["lapce-core/lang-svelte"]
lang-swift = ["lapce-core/lang-swift"]
lang-toml = ["lapce-core/lang-toml"]
lang-typescript = ["lapce-core/lang-typescript"]
lang-vue = ["lapce-core/lang-vue"]
lang-wgsl = ["lapce-core/lang-wgsl"]
lang-xml = ["lapce-core/lang-xml"]
lang-yaml = ["lapce-core/lang-yaml"]
lang-zig = ["lapce-core/lang-zig"]
