[package]
name = "lapce-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
alacritty_terminal.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
hashbrown.workspace = true
im.workspace = true
include_dir.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
toml_edit.workspace = true

lsp-types.workspace = true

lapce-xi-rope.workspace = true

lapce-core.workspace = true
lapce-data.workspace = true
lapce-proxy.workspace = true
lapce-rpc.workspace = true

druid.workspace = true

image = "0.24.3"
fern = "0.6.0"
Inflector = "0.11.4"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
unicode-width = "0.1.10"
open = "3.0.2" # bump when other deps using windows{,-sys} are bump'd

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
default = ["all-languages", "lapce-data/updater"]
portable = ["lapce-data/portable"]

# To build lapce with only some of the supported languages, for example:
#
#   cargo build --no-default-features -p lapce-ui \
#     --features lang-rust,lang-toml,lang-markdown,lang-json
#
all-languages = [
    "lang-bash",
    "lang-c",
    "lang-clojure",
    "lang-cmake",
    "lang-cpp",
    "lang-csharp",
    "lang-css",
    "lang-d",
    "lang-dart",
    "lang-dockerfile",
    "lang-elixir",
    "lang-elm",
    "lang-erlang",
    "lang-glimmer",
    "lang-glsl",
    "lang-go",
    "lang-hare",
    "lang-haskell",
    "lang-haxe",
    "lang-hcl",
    "lang-html",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-julia",
    "lang-kotlin",
    "lang-latex",
    "lang-lua",
    "lang-markdown",
    "lang-nix",
    "lang-ocaml",
    "lang-php",
    "lang-prisma",
    "lang-protobuf",
    "lang-python",
    "lang-ql",
    "lang-r",
    "lang-ruby",
    "lang-rust",
    "lang-scheme",
    "lang-scss",
    "lang-sql",
    "lang-svelte",
    "lang-swift",
    "lang-toml",
    "lang-typescript",
    "lang-vue",
    "lang-wgsl",
    "lang-xml",
    "lang-yaml",
    "lang-zig",
]

lang-bash = ["lapce-core/lang-bash"]
lang-c = ["lapce-core/lang-c"]
lang-clojure = ["lapce-core/lang-clojure"]
lang-cmake = ["lapce-core/lang-cmake"]
lang-cpp = ["lapce-core/lang-cpp"]
lang-csharp = ["lapce-core/lang-csharp"]
lang-css = ["lapce-core/lang-css"]
lang-d = ["lapce-core/lang-d"]
lang-dart = ["lapce-core/lang-dart"]
lang-dockerfile = ["lapce-core/lang-dockerfile"]
lang-elixir = ["lapce-core/lang-elixir"]
lang-elm = ["lapce-core/lang-elm"]
lang-erlang = ["lapce-core/lang-erlang"]
lang-glimmer = ["lapce-core/lang-glimmer"]
lang-glsl = ["lapce-core/lang-glsl"]
lang-go = ["lapce-core/lang-go"]
lang-hare = ["lapce-core/lang-hare"]
lang-haskell = ["lapce-core/lang-haskell"]
lang-haxe = ["lapce-core/lang-haxe"]
lang-hcl = ["lapce-core/lang-hcl"]
lang-html = ["lapce-core/lang-html"]
lang-java = ["lapce-core/lang-java"]
lang-javascript = ["lapce-core/lang-javascript"]
lang-json = ["lapce-core/lang-json"]
lang-julia = ["lapce-core/lang-julia"]
lang-kotlin = ["lapce-core/lang-kotlin"]
lang-latex = ["lapce-core/lang-latex"]
lang-lua = ["lapce-core/lang-lua"]
lang-markdown = ["lapce-core/lang-markdown"]
lang-nix = ["lapce-core/lang-nix"]
lang-ocaml = ["lapce-core/lang-ocaml"]
lang-php = ["lapce-core/lang-php"]
lang-prisma = ["lapce-core/lang-prisma"]
lang-protobuf = ["lapce-core/lang-protobuf"]
lang-python = ["lapce-core/lang-python"]
lang-ql = ["lapce-core/lang-ql"]
lang-r = ["lapce-core/lang-r"]
lang-ruby = ["lapce-core/lang-ruby"]
lang-rust = ["lapce-core/lang-rust"]
lang-scheme = ["lapce-core/lang-scheme"]
lang-scss = ["lapce-core/lang-scss"]
lang-sql = ["lapce-core/lang-sql"]
lang-svelte = ["lapce-core/lang-svelte"]
lang-swift = ["lapce-core/lang-swift"]
lang-toml = ["lapce-core/lang-toml"]
lang-typescript = ["lapce-core/lang-typescript"]
lang-vue = ["lapce-core/lang-vue"]
lang-wgsl = ["lapce-core/lang-wgsl"]
lang-xml = ["lapce-core/lang-xml"]
lang-yaml = ["lapce-core/lang-yaml"]
lang-zig = ["lapce-core/lang-zig"]
