[package]
name = "lapce-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
alacritty_terminal.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
hashbrown.workspace = true
im.workspace = true
include_dir.workspace = true
indexmap.workspace = true
itertools.workspace = true
once_cell.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
strum.workspace = true
toml_edit.workspace = true

lsp-types.workspace = true

lapce-xi-rope.workspace = true

lapce-core.workspace = true
lapce-data.workspace = true
lapce-proxy.workspace = true
lapce-rpc.workspace = true

druid.workspace = true

image = "0.24.3"
fern = "0.6.0"
Inflector = "0.11.4"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
unicode-width = "0.1.10"
open = "3.0.2" # bump when other deps using windows{,-sys} are bump'd
log = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
default = [
    "default-languages",
    "lapce-data/updater",
]
portable = [
    "lapce-core/portable",
    "lapce-data/portable",
]

# To build lapce with only some of the supported languages, for example:
#
#   cargo build --no-default-features -p lapce-ui \
#     --features lang-rust,lang-toml,lang-markdown,lang-json
#
default-languages = []
