[package]
name = "lapce-lsp"
version = "0.0.1"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
xi-rpc = { path = "../../xi-editor/rust/rpc/" }
lapce-core = { path = "../core" }
anyhow = "1.0.32"
parking_lot = "0.11.0"
jsonrpc-lite = "0.5.0"
