[package]
name = "lapce-lsp"
version = "0.0.1"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2018"

[dependencies]
memchr = "2.3.3"
languageserver-types = "0.54"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
xi-rpc = "0.3.0"
xi-rope = "0.3.0"
anyhow = "1.0.32"
parking_lot = "0.11.0"
jsonrpc-lite = "0.5.0"
