[package]
name = "lapce-proxy"
version = "0.0.1"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2018"

[dependencies]
lapce-rpc = { path = "../rpc" }
xi-rpc = { path = "../../xi-editor/rust/rpc/" }
xi-rope = { path = "../../xi-editor/rust/rope/" }
serde = { version = "1.0", features = ["derive"] }
lsp-types = { version = "0.82.0", features = ["proposed"] }
parking_lot = { version = "0.11.0", features = ["deadlock_detection"] }
crossbeam-channel = "0.5.0"
jsonrpc-lite = "0.5.0"
serde_json = "1.0.59"
anyhow = "1.0.32"
home = "0.5.3"
toml = "0.5.6"
