[package]
name = "lapce-proxy"
version = "0.0.1"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2018"

[dependencies]
locale_config = "0.3.0"
base64 = "0.13.0"
alacritty_terminal = "0.15.0"
mio = "0.6.20"
notify = "4.0.16"
lapce-rpc = { path = "../rpc" }
xi-core-lib = "0.3.0"
xi-rope = "0.3.0"
xi-rpc = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
lsp-types = { version = "0.89.2", features = ["proposed"] }
parking_lot = { version = "0.11.0", features = ["deadlock_detection"] }
crossbeam-channel = "0.5.0"
jsonrpc-lite = "0.5.0"
serde_json = "1.0.59"
anyhow = "1.0.32"
home = "0.5.3"
toml = "0.5.6"
git2 = { version = "0.13.23", features = ["vendored-openssl"] }
