[package]
name = "crane_ui"
version = "0.1.0"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piet-cairo = "0.0.6"
uuid = { version = "0.7.4", features = ["v4"] }
crane_ui_macros = {path = "../ui_macros"}
druid = {path = "../../druid"}
