[package]
name         = "meta"
license      = { workspace = true }
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
strum        = { workspace = true }
strum_macros = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.build-dependencies]
git2   = { workspace = true }
