[package]
name         = "make"
version      = "0.0.0"
description  = "Build helper tool for Lapce"
license      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
clap              = { workspace = true }
anyhow            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }
